# slang_nanoclaw

./: .env.example  .gitignore  package-lock.json  package.json  vitest.config.ts
container/: Dockerfile
container/mcp-servers/slang-mcp/: .env.example  .gitignore  .mcp.json  CLAUDE.md  Issues.md  README.md  __init__.py  __main__.py  pyproject.toml  pytest.ini  requirements.txt
container/mcp-servers/slang-mcp/.claude/commands/: daily_report.md
container/mcp-servers/slang-mcp/.cursor/: .cursorrules
container/mcp-servers/slang-mcp/.cursor/rules/: slang-maintainer.mdc
container/mcp-servers/slang-mcp/prompts/: generate_daily_report.txt  github_issue_prioritization.txt  review_messages.txt
container/mcp-servers/slang-mcp/src/: __init__.py  __main__.py  config.py  server.py
container/mcp-servers/slang-mcp/src/discord/: __init__.py  discord.py
container/mcp-servers/slang-mcp/src/github/: __init__.py  github.py
container/mcp-servers/slang-mcp/src/gitlab/: __init__.py  gitlab.py
container/mcp-servers/slang-mcp/src/slack/: __init__.py  slack.py
container/mcp-servers/slang-mcp/test/: conftest.py  test_config.py  test_discord.py  test_github.py  test_github_issue.py  test_github_pull_requests.py  test_gitlab.py  test_server.py
dashboard/: server.test.ts  server.ts
dashboard/public/: app.js  index.html  sprites.js
groups/: coworker-types.json
groups/global/: CLAUDE.md
setup/: register.ts
src/: config.ts  container-runner.test.ts  container-runner.ts  container-runtime.ts  credential-proxy.ts  db.ts  index.ts  ipc.ts  mcp-proxy.ts  types.ts
(+45 files in other folders)
