[project]
name = "slang-mcp-server"
version = "0.1.0"
description = "An MCP server exposing GitHub API tools"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "llm", "automation", "github", "api"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "anyio>=4.5",
    "click>=8.1.0",
    "mcp",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "discord.py>=2.3.0",
    "certifi>=2025.11.12",
    "aiosqlite>=0.19.0",
]

[project.scripts]
slang-mcp-server = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.378",
 "pytest>=8.3.3",
 "pytest-asyncio>=1.0.0",
 "ruff>=0.6.9",
] 
